testdata/baselines/reference/compiler/deeplyNestedArrayTypes.errors.txt
deeplyNestedArrayTypes.tlua(30,5): error TS2322: Type 'BOuter' is not assignable to type 'AOuter'.
  Types of property 'inners' are incompatible.
    Type 'BInner[]' is not assignable to type 'AInner[]'.
      Type 'BInner' is not assignable to type 'AInner'.
        Types of property 'mids' are incompatible.
          Type 'BMid[]' is not assignable to type 'AMid[]'.
            Type 'BMid' is not assignable to type 'AMid'.
              Types of property 'leaves' are incompatible.
                Type 'BLeaf[]' is not assignable to type 'ALeaf[]'.
                  Type 'BLeaf' is not assignable to type 'ALeaf'.
                    Types of property 'id' are incompatible.
                      Type 'number' is not assignable to type 'string'.


==== deeplyNestedArrayTypes.tlua (1 errors) ====
    // https://github.com/microsoft/typescript-go/issues/3426
    
    type AOuter = {
        inners: AInner[];
    }
    type AInner = {
        mids: AMid[];
    }
    type AMid = {
        leaves: ALeaf[];
    }
    type ALeaf = {
        id: string;
    }
    
    type BOuter = {
        inners: BInner[];
    }
    type BInner = {
        mids: BMid[];
    }
    type BMid = {
        leaves: BLeaf[];
    }
    type BLeaf = {
        id: number;
    }
    
    function test(a: AOuter, b: BOuter) {
        a = b
        ~
!!! error TS2322: Type 'BOuter' is not assignable to type 'AOuter'.
!!! error TS2322:   Types of property 'inners' are incompatible.
!!! error TS2322:     Type 'BInner[]' is not assignable to type 'AInner[]'.
!!! error TS2322:       Type 'BInner' is not assignable to type 'AInner'.
!!! error TS2322:         Types of property 'mids' are incompatible.
!!! error TS2322:           Type 'BMid[]' is not assignable to type 'AMid[]'.
!!! error TS2322:             Type 'BMid' is not assignable to type 'AMid'.
!!! error TS2322:               Types of property 'leaves' are incompatible.
!!! error TS2322:                 Type 'BLeaf[]' is not assignable to type 'ALeaf[]'.
!!! error TS2322:                   Type 'BLeaf' is not assignable to type 'ALeaf'.
!!! error TS2322:                     Types of property 'id' are incompatible.
!!! error TS2322:                       Type 'number' is not assignable to type 'string'.
    }
    